--- a/po/es.po
+++ b/po/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: gnome-video-arcade.po.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=\n"
 "POT-Creation-Date: 2009-06-14 01:53+0000\n"
-"PO-Revision-Date: 2009-07-11 13:59+0200\n"
+"PO-Revision-Date: 2009-07-11 14:15+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -128,7 +128,7 @@ msgstr "General"
 
 #: ../data/gnome-video-arcade.glade.h:23
 msgid "History"
-msgstr "Histórico"
+msgstr "Historia"
 
 #: ../data/gnome-video-arcade.glade.h:24 ../src/gva-ui.c:771
 msgid "Only show my favorite games"
@@ -370,7 +370,7 @@ msgstr "Reproduciendo"
 #: ../src/gva-history.c:43
 msgid "This program is not configured to show history information."
 msgstr ""
-"Este programa no está configurado para mostrar información del histórico."
+"Este programa no está configurado para mostrar información de la historia."
 
 #: ../src/gva-input-file.c:525
 #, c-format
@@ -563,12 +563,12 @@ msgid ""
 "Error while fetching history:\n"
 "%s"
 msgstr ""
-"Fallo al obtener el histórico:\n"
+"Fallo al obtener la historia:\n"
 "%s"
 
 #: ../src/gva-properties.c:464
 msgid "History not available"
-msgstr "Histórico no disponible"
+msgstr "Historia no disponible"
 
 #: ../src/gva-tree-view.c:421
 msgid "Available Game"
