--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2009-07-19  Matthew Barnes  <mbarnes@redhat.com>
+
+	* configure.ac:
+	Remove libglade check.
+
+	* data/Makefile.am:
+	Replace gnome-video-arcade.glade with gnome-video-arcade.builder.
+
+	* data/gnome-video-arcade.builder:
+	GtkBuilder file generated using gtk-builder-convert.
+
+	* src/Makefile.am:
+	Remove GLADE_CFLAGS and GLADE_LIBS.
+
+	* src/gva-ui.c (ui_init):
+	Initialize a GtkBuilder instead of a GladeXML.
+
+	* src/gva-ui.c (gva_ui_get_widget):
+	Fetch object from the GtkBuilder and cast it to a GtkWidget.
+
 2009-07-16  Matthew Barnes  <mbarnes@redhat.com>
 
 	* README:
